PROTON-1473: Better behaviour if peer disconnects in the middle of header exchange - Especially if the server disconnects the client because of authentication failure   There is no more spurious 'Header mismatch' error.